carousel layout added

--- a/index.html
+++ b/index.html
@@ -7,19 +7,51 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <div class="container">
-    <div class="testimonial-wrapper">
-      <p class="testimonial">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <p class="testimonial">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-      <p class="testimonial">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-      <p class="testimonial">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-      <p class="testimonial">It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-      <p class="testimonial">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+  <div class="demo-product-container">
+    <div class="concern-wrapper">
+      <h3>Skin Concern?</h3>
+      <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
+      <div class="concern-mini">
+        <div class="item">
+          <img src="images/pencil.png">
+          <div class="concern-mini-text">
+            <p class="heading">CONCERN</p>
+            <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/pencil.png">
+          <div class="concern-mini-text">
+            <p class="heading">PRODUCTS</p>
+            <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="carousel-product-wrapper">
+      <div class="carousel-product-list">
+        <div class="carousel-product initial">
+          <p class="text-header">Locate the product that is best for your condition.</p>
+          <img src="images/bottle1.jpg">
+          <div class="price"><span>$165.97</span>$141.00</div>
+          <a href="#" class="learn-how-btn">Learn How</a>
+        </div>
+        <div class="carousel-product">
+          <p class="text-header">Locate the product that is best for your condition.</p>
+          <img src="images/bottle2.jpg">
+          <div class="price"><span>$235.97</span>$121.00</div>
+          <a href="#" class="learn-how-btn">Learn How</a>
+        </div>
+        <div class="carousel-product">
+          <p class="text-header">Locate the product that is best for your condition.</p>
+          <img src="images/bottle3.jpg">
+          <div class="price"><span>$535.97</span>$441.00</div>
+          <a href="#" class="learn-how-btn">Learn How</a>
+        </div>
 
-    <div class="controls">
-      <button id="previous">Previous</button>
-      <button id="next">Next</button>
+        <div id="carousel-button-next"></div>
+        <div id="carousel-button-prev"></div>
+      </div>
     </div>
   </div>
 
