--- a/index.html
+++ b/index.html
@@ -7,51 +7,101 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <div class="demo-product-container">
-    <div class="concern-wrapper">
-      <h3>Skin Concern?</h3>
-      <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
-      <div class="concern-mini">
-        <div class="item">
-          <img src="images/pencil.png">
-          <div class="concern-mini-text">
-            <p class="heading">CONCERN</p>
-            <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+  <div class="carousel-product-wrapper">
+    <div class="carousel-product-list">
+      <div class="carousel-product initial">
+        <div class="product-left-part">
+          <div class="concern-wrapper">
+            <h3>Skin Concern?</h3>
+            <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
+            <div class="concern-mini">
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">CONCERN</p>
+                  <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">PRODUCTS</p>
+                  <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <img src="images/pencil.png">
-          <div class="concern-mini-text">
-            <p class="heading">PRODUCTS</p>
-            <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-product-wrapper">
-      <div class="carousel-product-list">
-        <div class="carousel-product initial">
+        <div class="product-right-part">
           <p class="text-header">Locate the product that is best for your condition.</p>
           <img src="images/bottle1.jpg">
           <div class="price"><span>$165.97</span>$141.00</div>
           <a href="#" class="learn-how-btn">Learn How</a>
         </div>
-        <div class="carousel-product">
+      </div>
+      <div class="carousel-product">
+        <div class="product-left-part">
+          <div class="concern-wrapper">
+            <h3>Skin Concern?</h3>
+            <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
+            <div class="concern-mini">
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">CONCERN</p>
+                  <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">PRODUCTS</p>
+                  <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="product-right-part">
           <p class="text-header">Locate the product that is best for your condition.</p>
           <img src="images/bottle2.jpg">
-          <div class="price"><span>$235.97</span>$121.00</div>
+          <div class="price"><span>$165.97</span>$141.00</div>
           <a href="#" class="learn-how-btn">Learn How</a>
         </div>
-        <div class="carousel-product">
+      </div>
+      <div class="carousel-product">
+        <div class="product-left-part">
+          <div class="concern-wrapper">
+            <h3>Skin Concern?</h3>
+            <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
+            <div class="concern-mini">
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">CONCERN</p>
+                  <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/pencil.png">
+                <div class="concern-mini-text">
+                  <p class="heading">PRODUCTS</p>
+                  <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="product-right-part">
           <p class="text-header">Locate the product that is best for your condition.</p>
           <img src="images/bottle3.jpg">
-          <div class="price"><span>$535.97</span>$441.00</div>
+          <div class="price"><span>$165.97</span>$141.00</div>
           <a href="#" class="learn-how-btn">Learn How</a>
         </div>
-
-        <div id="carousel-button-next"></div>
-        <div id="carousel-button-prev"></div>
       </div>
+
+      <div id="carousel-button-next"></div>
+      <div id="carousel-button-prev"></div>
     </div>
   </div>
 
