carousel layout v4 added

--- a/index.html
+++ b/index.html
@@ -13,40 +13,73 @@
       <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
       <div class="concern-mini">
         <div class="item">
-          <img src="images/pencil.png">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
           <div class="concern-mini-text">
             <p class="heading">CONCERN</p>
-            <p class="sub-heading">ACNE/WHITE & BLACKHEADS</p>
+            <div class="no-slider-carousel-wrapper">
+              <div class="subheading-concern no-slider-carousel-list">
+                <p class="no-slider-item">ACNE/WHITE & BLACKHEADS</p>
+                <p class="no-slider-item">BLACKHEADS & ACNE/WHITE</p>
+                <p class="no-slider-item">Lorem ipsum dolor sit ame</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="item">
-          <img src="images/pencil.png">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
           <div class="concern-mini-text">
             <p class="heading">PRODUCTS</p>
-            <p class="sub-heading">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+            <div class="no-slider-carousel-wrapper">
+              <div class="products-concern no-slider-carousel-list">
+                <p class="no-slider-item">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
+                <p class="no-slider-item">Resurfacing Creme, & Revitalazing Serum, Perfec-Tone Clear & Spotless Set - Clarifying Gel</p>
+                <p class="no-slider-item">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="carousel-product-wrapper">
+      <p class="text-header">Locate the product that is best for your condition.</p>
       <div class="carousel-product-list">
-        <div class="carousel-product initial">
-          <p class="text-header">Locate the product that is best for your condition.</p>
-          <img src="images/bottle1.jpg">
-          <div class="price"><span>$165.97</span>$141.00</div>
-          <a href="#" class="learn-how-btn">Learn How</a>
+        <div class="carousel-product">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle1.png?v=1591272603">
         </div>
         <div class="carousel-product">
-          <p class="text-header">Locate the product that is best for your condition.</p>
-          <img src="images/bottle2.jpg">
-          <div class="price"><span>$235.97</span>$121.00</div>
-          <a href="#" class="learn-how-btn">Learn How</a>
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle2.jpg?v=1591272199">
         </div>
         <div class="carousel-product">
-          <p class="text-header">Locate the product that is best for your condition.</p>
-          <img src="images/bottle3.jpg">
-          <div class="price"><span>$535.97</span>$441.00</div>
-          <a href="#" class="learn-how-btn">Learn How</a>
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle3.jpg?v=1591272199">
+        </div>
+        <div class="no-slider-carousel-wrapper">
+          <div class="price-carousel-product no-slider-carousel-list">
+            <div class="no-slider-item">
+              <p id="price-strike">$165.97</p>
+              <p id="price">$141.00</p>
+            </div>
+            <div class="no-slider-item">
+              <p id="price-strike">$365.97</p>
+              <p id="price">$241.00</p>
+            </div>
+            <div class="no-slider-item">
+              <p id="price-strike">$465.97</p>
+              <p id="price">$221.00</p>
+            </div>
+          </div>
+        </div>
+        <div class="no-slider-carousel-wrapper">
+          <div class="learn-how-link no-slider-carousel-list">
+            <div class="no-slider-item">
+              <a href="#1" id="learn-how-btn">Learn How</a>
+            </div>
+            <div class="no-slider-item">
+              <a href="#2" id="learn-how-btn">Learn How</a>
+            </div>
+            <div class="no-slider-item">
+              <a href="#3" id="learn-how-btn">Learn How</a>
+            </div>
+          </div>
         </div>
 
         <div id="carousel-button-next"></div>
