--- a/index.html
+++ b/index.html
@@ -16,26 +16,14 @@
           <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
           <div class="concern-mini-text">
             <p class="heading">CONCERN</p>
-            <div class="no-slider-carousel-wrapper">
-              <div class="subheading-concern no-slider-carousel-list">
-                <p class="no-slider-item">ACNE/WHITE & BLACKHEADS</p>
-                <p class="no-slider-item">BLACKHEADS & ACNE/WHITE</p>
-                <p class="no-slider-item">Lorem ipsum dolor sit ame</p>
-              </div>
-            </div>
+            <p id="subheading-concern"></p>
           </div>
         </div>
         <div class="item">
           <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
           <div class="concern-mini-text">
             <p class="heading">PRODUCTS</p>
-            <div class="no-slider-carousel-wrapper">
-              <div class="products-concern no-slider-carousel-list">
-                <p class="no-slider-item">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
-                <p class="no-slider-item">Resurfacing Creme, & Revitalazing Serum, Perfec-Tone Clear & Spotless Set - Clarifying Gel</p>
-                <p class="no-slider-item">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-              </div>
-            </div>
+            <p id="subheading-product"></p>
           </div>
         </div>
       </div>
@@ -52,34 +40,12 @@
         <div class="carousel-product">
           <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle3.jpg?v=1591272199">
         </div>
-        <div class="no-slider-carousel-wrapper">
-          <div class="price-carousel-product no-slider-carousel-list">
-            <div class="no-slider-item">
-              <p id="price-strike">$165.97</p>
-              <p id="price">$141.00</p>
-            </div>
-            <div class="no-slider-item">
-              <p id="price-strike">$365.97</p>
-              <p id="price">$241.00</p>
-            </div>
-            <div class="no-slider-item">
-              <p id="price-strike">$465.97</p>
-              <p id="price">$221.00</p>
-            </div>
-          </div>
+        <div class="price-wrapper">
+          <p id="price-strike"></p>
+          <p id="price"></p>
         </div>
-        <div class="no-slider-carousel-wrapper">
-          <div class="learn-how-link no-slider-carousel-list">
-            <div class="no-slider-item">
-              <a href="#1" id="learn-how-btn">Learn How</a>
-            </div>
-            <div class="no-slider-item">
-              <a href="#2" id="learn-how-btn">Learn How</a>
-            </div>
-            <div class="no-slider-item">
-              <a href="#3" id="learn-how-btn">Learn How</a>
-            </div>
-          </div>
+        <div class="learn-more-wrapper">
+          <a href="#" id="learn-how-btn">Learn How</a>
         </div>
 
         <div id="carousel-button-next"></div>
