--- a/index.html
+++ b/index.html
@@ -3,91 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carousel in Javascript</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="demo-product-container">
-    <div class="concern-wrapper">
-      <h3>Skin Concern?</h3>
-      <p class="subtitle">Begin by first determining your skin aliment. Swipe Products to find out.</p>
-      <div class="concern-mini">
-        <div class="item">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
-          <div class="concern-mini-text">
-            <p class="heading">CONCERN</p>
-            <div class="no-slider-carousel-wrapper">
-              <div class="subheading-concern no-slider-carousel-list">
-                <p class="no-slider-item">ACNE/WHITE & BLACKHEADS</p>
-                <p class="no-slider-item">BLACKHEADS & ACNE/WHITE</p>
-                <p class="no-slider-item">Lorem ipsum dolor sit ame</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/pencil.png?v=1591272199">
-          <div class="concern-mini-text">
-            <p class="heading">PRODUCTS</p>
-            <div class="no-slider-carousel-wrapper">
-              <div class="products-concern no-slider-carousel-list">
-                <p class="no-slider-item">Perfec-Tone Clear & Spotless Set - Clarifying Gel, Resurfacing Creme, & Revitalazing Serum</p>
-                <p class="no-slider-item">Resurfacing Creme, & Revitalazing Serum, Perfec-Tone Clear & Spotless Set - Clarifying Gel</p>
-                <p class="no-slider-item">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<body style="margin: 0; padding: 0;">
+  <div class="demo">
+    <div>
+      asdadad
     </div>
-    <div class="carousel-product-wrapper">
-      <p class="text-header">Locate the product that is best for your condition.</p>
-      <div class="carousel-product-list">
-        <div class="carousel-product">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle1.png?v=1591272603">
-        </div>
-        <div class="carousel-product">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle2.jpg?v=1591272199">
-        </div>
-        <div class="carousel-product">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle3.jpg?v=1591272199">
-        </div>
-        <div class="no-slider-carousel-wrapper">
-          <div class="price-carousel-product no-slider-carousel-list">
-            <div class="no-slider-item">
-              <p id="price-strike">$165.97</p>
-              <p id="price">$141.00</p>
-            </div>
-            <div class="no-slider-item">
-              <p id="price-strike">$365.97</p>
-              <p id="price">$241.00</p>
-            </div>
-            <div class="no-slider-item">
-              <p id="price-strike">$465.97</p>
-              <p id="price">$221.00</p>
-            </div>
-          </div>
-        </div>
-        <div class="no-slider-carousel-wrapper">
-          <div class="learn-how-link no-slider-carousel-list">
-            <div class="no-slider-item">
-              <a href="#1" id="learn-how-btn">Learn How</a>
-            </div>
-            <div class="no-slider-item">
-              <a href="#2" id="learn-how-btn">Learn How</a>
-            </div>
-            <div class="no-slider-item">
-              <a href="#3" id="learn-how-btn">Learn How</a>
-            </div>
-          </div>
-        </div>
-
-        <div id="carousel-button-next"></div>
-        <div id="carousel-button-prev"></div>
-      </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
     </div>
   </div>
-
-  <script src="index.js"></script>
+  <div class="product-slider-wrapper">
+    <div class="on-sale-tag">
+      <p>ON SALE</p>
+    </div>
+    <div class="product-slider-container">
+      <div class="product-slider-list">
+        <div class="single-product-slider">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle1.png?v=1591272603">
+        </div>
+        <div class="single-product-slider">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle2.jpg?v=1591272199">
+        </div>
+        <div class="single-product-slider">
+          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle3.jpg?v=1591272199">
+        </div>
+        <div class="single-product-slider">
+          <img src="1.jpg">
+        </div>
+        <div class="single-product-slider">
+          <img src="2.jpg">
+        </div>
+      </div>
+    </div>
+    <div class="product-mini-des-wrapper">
+      <p class="product-title">
+        Perfec-tone Aloe + Green Tea Exfoliating Cleanser With Salicylic + Lactic Acids - 120ml (4 fl. oz.)
+      </p>
+      <div class="product-rating">
+        5/5 &#9733; &#9733; &#9733; &#9733; &#9733;
+      </div>
+      <p class="short-description">Scrub away dist and dead skin cells with this calming cleanser that works to remove white and blackheads while firming the skin for a continued youthful radiance.</p>
+      <a class="see-details" href="#">See details</a>
+    </div>
+    <div class="product-slider-navigator">
+      <div id="product-slider-btn-prev"></div>
+      <div id="slider-indicator-wrapper">
+      </div>
+      <div id="product-slider-btn-next"></div>
+    </div>
+  </div>
+  <div class="demo">
+    <div>
+      asdadad
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+    <div>
+      adadas
+    </div>
+  </div>
+  <script src="main.js"></script>
 </body>
 </html>
