product page responsive

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     <div class="product-slider-container">
       <div class="product-slider-list">
         <div class="single-product-slider">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle1.png?v=1591272603">
+          <img src="https://i.picsum.photos/id/1025/2600/1200.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle2.jpg?v=1591272199">
+          <img src="https://i.picsum.photos/id/1022/2600/1200.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="https://cdn.shopify.com/s/files/1/0386/4136/9132/files/bottle3.jpg?v=1591272199">
+          <img src="https://i.picsum.photos/id/1023/2600/1200.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="1.jpg">
+          <img src="https://i.picsum.photos/id/222/2600/1200.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="2.jpg">
+          <img src="https://i.picsum.photos/id/622/2600/1200.jpg">
         </div>
       </div>
     </div>
