--- a/index.html
+++ b/index.html
@@ -37,21 +37,24 @@
     <div class="product-slider-container">
       <div class="product-slider-list">
         <div class="single-product-slider">
-          <img src="https://i.picsum.photos/id/1025/2600/1200.jpg">
+          <img src="images/1.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="https://i.picsum.photos/id/1022/2600/1200.jpg">
+          <img src="images/2.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="https://i.picsum.photos/id/1023/2600/1200.jpg">
+          <img src="images/3.jpg">
         </div>
         <div class="single-product-slider">
-          <img src="https://i.picsum.photos/id/222/2600/1200.jpg">
-        </div>
-        <div class="single-product-slider">
-          <img src="https://i.picsum.photos/id/622/2600/1200.jpg">
+          <img src="images/4.jpg">
         </div>
       </div>
+    </div>
+    <div class="product-slider-navigator">
+      <div id="product-slider-btn-prev"></div>
+      <div id="slider-indicator-wrapper">
+      </div>
+      <div id="product-slider-btn-next"></div>
     </div>
     <div class="product-mini-des-wrapper">
       <p class="product-title">
@@ -62,12 +65,6 @@
       </div>
       <p class="short-description">Scrub away dist and dead skin cells with this calming cleanser that works to remove white and blackheads while firming the skin for a continued youthful radiance.</p>
       <a class="see-details" href="#">See details</a>
-    </div>
-    <div class="product-slider-navigator">
-      <div id="product-slider-btn-prev"></div>
-      <div id="slider-indicator-wrapper">
-      </div>
-      <div id="product-slider-btn-next"></div>
     </div>
   </div>
   <div class="demo">
