--- a/index.html
+++ b/index.html
@@ -30,41 +30,52 @@
       adadas
     </div>
   </div>
-  <div class="product-slider-wrapper">
-    <div class="on-sale-tag">
-      <p>ON SALE</p>
-    </div>
-    <div class="product-slider-container">
-      <div class="product-slider-list">
-        <div class="single-product-slider">
-          <img src="images/1.jpg">
+  <div class="motif-fluid-wrapper">
+    <div class="motif-testimonial-wrapper">
+      <div class="motif-testimonial-slider-container">
+        <div class="testimonial-heading">
+          <h2>What Our Customers Are Saying</h2>
         </div>
-        <div class="single-product-slider">
-          <img src="images/2.jpg">
+        <div class="motif-testimonial-list">
+          <div class="motif-single-testimonial">
+            <div class="motif-video-wrapper">
+              <iframe src="https://player.vimeo.com/video/431631760" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div class="motif-testimonial-content">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+              <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+            </div>
+          </div>
+          <div class="motif-single-testimonial">
+            <div class="motif-video-wrapper">
+              <iframe src="https://player.vimeo.com/video/431646604" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div class="motif-testimonial-content">
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+              <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+            </div>
+          </div>
+          <div class="motif-single-testimonial">
+            <div class="motif-video-wrapper">
+              <iframe src="https://player.vimeo.com/video/431647127" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div class="motif-testimonial-content">
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+              <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took</p>
+              <p>Check out satisfied customers of Perfec-Tone Skin care products</p>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+          </div>
         </div>
-        <div class="single-product-slider">
-          <img src="images/3.jpg">
-        </div>
-        <div class="single-product-slider">
-          <img src="images/4.jpg">
+        <div class="testimonial-slider-navigator">
+          <div id="testimonial-slider-btn-prev"></div>
+          <div id="testimonial-slider-btn-next"></div>
         </div>
       </div>
-    </div>
-    <div class="product-slider-navigator">
-      <div id="product-slider-btn-prev"></div>
-      <div id="slider-indicator-wrapper">
-      </div>
-      <div id="product-slider-btn-next"></div>
-    </div>
-    <div class="product-mini-des-wrapper">
-      <p class="product-title">
-        Perfec-tone Aloe + Green Tea Exfoliating Cleanser With Salicylic + Lactic Acids - 120ml (4 fl. oz.)
-      </p>
-      <div class="product-rating">
-        5/5 &#9733; &#9733; &#9733; &#9733; &#9733;
-      </div>
-      <p class="short-description">Scrub away dist and dead skin cells with this calming cleanser that works to remove white and blackheads while firming the skin for a continued youthful radiance.</p>
-      <a class="see-details" href="#">See details</a>
     </div>
   </div>
   <div class="demo">
